# GDB-ML

./: .gitignore  .travis.yml  HISTORY.rst  Makefile  README.rst  REPRODUCIBILITY.rst  environment-gdb20.yaml  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: installation.rst
generative_models/: environment-py39.yaml  train_model.py
generative_models/models/: actions.py  model.py
generative_models/utils/: log.py
src/: __init__.py
src/gdb_ml/: __init__.py  chem_utils.py  data_processor.py  graph_mapping.py  properties_calculator.py
transformer/: environment-opennmt.yaml  pipeline.ipynb
transformer/OpenNMT_py.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
transformer/data/: shuffled_val_keys_part_ac_canonical_concatenated_tokenized.txt
transformer/gdb20_data/: shuffled_val_values_part_ac_canonical_concatenated_tokenized.txt
transformer/model/: Preprocessed.vocab.pt
