[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gdb_ml"
version = "0.1.0"
description = "GDB-ML contains all the utils for a GDB machine learning based project."
readme = "README.rst"
requires-python = ">=3.9"
authors = [
  {name = "Ye Buehler", email = "ye.buehler@outlook.com"}
]
maintainers = [
  {name = "Ye Buehler", email = "ye.buehler@outlook.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
    "numpy",
    "openbabel-wheel",
    "pandarallel",
    "pandas",
    "rdkit",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/Ye-Buehler/GDB-ML/issues"
changelog = "https://github.com/Ye-Buehler/GDB-ML/blob/main/HISTORY.rst"
homepage = "https://github.com/Ye-Buehler/GDB-ML"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"
